# cyclo

./: .gitignore  CLAUDE.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: demo.ipynb
src/cyclo/: __init__.py  analysis.py  benchmark.py  config.py  signals.py
tests/: test_basic.py
